need to fix the logo later

--- a/locales/en.json
+++ b/locales/en.json
@@ -1,7 +1,7 @@
 {
   "app_name": "Healthy Life",
   "app_tagline": "Health & Wellness Tools",
-  
+
   "common_back_to_home": "Back to Home",
   "common_back": "Back",
   "common_next": "Next",
@@ -87,14 +87,114 @@
   "tool_cancer_title": "Cancer Symptom Check",
   "tool_cancer_description": "Screen for early warning signs. Early detection saves lives.",
   "tool_cancer_cta": "Check now",
+  "tool_cancer_badge": "Screening Tool",
+  "tool_cancer_subtitle": "Early detection saves lives. Answer honestly — this is for your awareness.",
+  "tool_cancer_gender_title": "First, tell us your gender",
+  "tool_cancer_gender_description": "This helps us ask the right questions",
+  "tool_cancer_general_symptoms": "General symptoms",
+  "tool_cancer_symptoms_description": "Have you experienced any of these in the past few months?",
+  "tool_cancer_women_symptoms": "Women-specific symptoms",
+  "tool_cancer_women_symptoms_description": "Additional symptoms to check",
+  "tool_cancer_check_symptoms": "Check Symptoms",
+  "tool_cancer_consult_title": "Please consult a doctor",
+  "tool_cancer_consult_description": "You reported one or more symptoms that need medical evaluation. Please consult a doctor at the nearest health facility for further evaluation. Early detection can make a significant difference.",
+  "tool_cancer_find_facility": "Find nearby health facility",
+  "tool_cancer_no_symptoms_title": "No symptoms reported",
+  "tool_cancer_no_symptoms_description": "Consider routine screening once every 5 years. If you notice new symptoms later, consult a health facility promptly.",
+  "tool_cancer_breast_exam_title": "Self-breast examination guide",
+  "tool_cancer_breast_exam_subtitle": "How to perform a self-breast examination:",
+  "tool_cancer_breast_exam_step1": "Stand in front of a mirror with shoulders straight and arms on hips",
+  "tool_cancer_breast_exam_step2": "Look for any changes in size, shape, or color of breasts",
+  "tool_cancer_breast_exam_step3": "Raise your arms and look for the same changes",
+  "tool_cancer_breast_exam_step4": "While lying down, use your right hand to feel your left breast and vice versa",
+  "tool_cancer_breast_exam_step5": "Use firm, smooth touches with finger pads in circular motions",
+  "tool_cancer_breast_exam_step6": "Cover the entire breast from top to bottom, side to side",
+  "tool_cancer_breast_exam_step7": "Feel your breasts while standing or sitting, such as in the shower",
+  "tool_cancer_breast_exam_note": "Seek help if you find a new lump, thickening, or any change. Monthly self-exams help you know what's normal for your body.",
+  "tool_cancer_about_title": "About this screening",
+  "tool_cancer_about_description": "This tool helps identify potential warning signs that may need medical attention. It is not a diagnosis. Many symptoms can have causes other than cancer. Only a healthcare professional can provide a proper diagnosis.",
+  "tool_cancer_cta_description": "Take our full assessment for personalized risk scores and guidance.",
 
   "tool_uhid_title": "Generate UHID",
   "tool_uhid_description": "Get your Unique Health ID for Kerala's digital health system.",
   "tool_uhid_cta": "Get started",
+  "tool_uhid_badge": "UHID Tool",
+  "tool_uhid_subtitle": "Your Unique Health Identifier for Kerala's digital health ecosystem",
+  "tool_uhid_what_is_title": "What is UHID?",
+  "tool_uhid_what_is_description_1": "UHID (Unique Health Identifier) is a unique identification number assigned to every citizen under Kerala's State Digital Health Mission. It serves as your digital health identity across all government healthcare facilities in Kerala.",
+  "tool_uhid_what_is_description_2": "With UHID, all your health records from government hospitals, PHCs, and health centers are linked together, making healthcare delivery smoother and more efficient.",
+  "tool_uhid_benefits_title": "Benefits of UHID",
+  "tool_uhid_benefit_1": "Access all your medical records in one place",
+  "tool_uhid_benefit_2": "Seamless care across Kerala's government hospitals",
+  "tool_uhid_benefit_3": "Secure and private health data storage",
+  "tool_uhid_benefit_4": "Easy access through mobile and web portal",
+  "tool_uhid_benefit_5": "Faster registration at healthcare facilities",
+  "tool_uhid_how_to_title": "How to Register",
+  "tool_uhid_how_to_description": "You'll need your Aadhaar number linked with a mobile number",
+  "tool_uhid_step_1": "Click the button below to visit the eHealth Kerala portal",
+  "tool_uhid_step_2": "Select 'Create UHID / Link Mobile Number with UHID'",
+  "tool_uhid_step_3": "Enter your Aadhaar number",
+  "tool_uhid_step_4": "Verify using OTP sent to your Aadhaar-linked mobile",
+  "tool_uhid_step_5": "Confirm your details and your UHID will be generated",
+  "tool_uhid_go_to_portal": "Go to eHealth Kerala Portal",
+  "tool_uhid_already_have_title": "Already have a UHID?",
+  "tool_uhid_already_have_description": "You can use the same portal to log in, view your health records, and manage your profile.",
+  "tool_uhid_faq_1_question": "What if my mobile isn't linked with Aadhaar?",
+  "tool_uhid_faq_1_answer": "If your mobile number is not linked with Aadhaar, you can visit the nearest government hospital reception desk to create your UHID with assistance from healthcare staff.",
+  "tool_uhid_faq_2_question": "Is my health data secure?",
+  "tool_uhid_faq_2_answer": "Yes. The State Digital Health Mission follows strict data protection guidelines. Your health records are encrypted and can only be accessed by authorized healthcare providers when you visit a facility.",
+  "tool_uhid_faq_3_question": "Can I use UHID at private hospitals?",
+  "tool_uhid_faq_3_answer": "Currently, UHID is primarily used in government healthcare facilities. However, integration with private hospitals is being expanded under the State Digital Health Mission.",
+  "tool_uhid_cta_title": "Want a health check?",
+  "tool_uhid_cta_description": "Take our quick assessment for personalized risk scores and guidance.",
+  "tool_uhid_cta_button": "Take Health Assessment",
 
   "tool_jak_title": "Find JAK",
   "tool_jak_description": "Locate your nearest Janakeeya Arogya Kendram health centre.",
   "tool_jak_cta": "Find now",
+  "tool_jak_badge": "Find JAK",
+  "tool_jak_subtitle": "Locate the nearest primary health centre in your area",
+  "tool_jak_what_is_title": "What is Janakeeya Arogya Kendram?",
+  "tool_jak_what_is_description_1": "Janakeeya Arogya Kendram (JAK) is Kerala's network of family health centres that provide comprehensive primary healthcare services to communities. These centres are the first point of contact for preventive, promotive, and curative healthcare.",
+  "tool_jak_what_is_description_2": "JAKs operate under the National Health Mission and offer free consultations, essential medicines, diagnostic services, and referral support.",
+  "tool_jak_services_title": "Services Available at JAK",
+  "tool_jak_service_opd": "General OPD",
+  "tool_jak_service_ncd": "NCD Screening",
+  "tool_jak_service_medicines": "Free Medicines",
+  "tool_jak_service_family": "Family Health",
+  "tool_jak_service_lab": "Lab Services",
+  "tool_jak_service_teleconsult": "Teleconsultation",
+  "tool_jak_search_title": "Search for JAK",
+  "tool_jak_search_description": "Find a Janakeeya Arogya Kendram near you",
+  "tool_jak_select_district": "Select District",
+  "tool_jak_choose_district": "Choose your district",
+  "tool_jak_search_by_name": "Search by name or location",
+  "tool_jak_search_placeholder": "e.g., Panchayat name, area...",
+  "tool_jak_coming_soon_title": "Coming Soon",
+  "tool_jak_coming_soon_description": "We're working on adding the complete directory of Janakeeya Arogya Kendrams. In the meantime, please contact your local ASHA worker or visit the nearest government health facility for assistance.",
+  "tool_jak_other_ways_title": "Other Ways to Find Help",
+  "tool_jak_helpline_title": "Health Helpline",
+  "tool_jak_helpline_description": "Call 104 for health information",
+  "tool_jak_asha_title": "Contact ASHA Worker",
+  "tool_jak_asha_description": "Your local ASHA can guide you to the nearest facility",
+  "tool_jak_phc_title": "Visit PHC/CHC",
+  "tool_jak_phc_description": "Go to your nearest Primary Health Centre",
+  "tool_jak_hours_title": "Typical Operating Hours",
+  "tool_jak_hours_weekday": "Monday - Saturday",
+  "tool_jak_hours_weekday_time": "8:00 AM - 4:00 PM",
+  "tool_jak_hours_emergency": "Emergency Services",
+  "tool_jak_hours_emergency_time": "24/7 (at select centres)",
+  "tool_jak_hours_sunday": "Sunday & Holidays",
+  "tool_jak_hours_sunday_time": "Emergency only",
+  "tool_jak_hours_note": "* Hours may vary by location. Please call ahead to confirm.",
+  "tool_jak_bring_title": "What to Bring",
+  "tool_jak_bring_1": "Aadhaar card or any government ID",
+  "tool_jak_bring_2": "UHID card (if you have one)",
+  "tool_jak_bring_3": "Previous medical records (if any)",
+  "tool_jak_bring_4": "List of current medications",
+  "tool_jak_cta_title": "Check your health first",
+  "tool_jak_cta_description": "Take our quick assessment before your visit to understand your risk factors.",
+  "tool_jak_cta_button": "Take Health Assessment",
 
   "assessment_badge": "Comprehensive Check",
   "assessment_title": "Complete Health Risk Assessment",
