--- a/locales/ml.json
+++ b/locales/ml.json
@@ -1,7 +1,7 @@
 {
   "app_name": "ഹെൽത്തി ലൈഫ്",
   "app_tagline": "ആരോഗ്യ ഉപകരണങ്ങൾ",
-  
+
   "common_back_to_home": "ഹോമിലേക്ക് മടങ്ങുക",
   "common_back": "പിന്നിലേക്ക്",
   "common_next": "അടുത്തത്",
@@ -86,12 +86,112 @@
   "tool_cancer_title": "കാൻസർ ലക്ഷണ പരിശോധന",
   "tool_cancer_description": "മുൻകൂർ മുന്നറിയിപ്പ് ലക്ഷണങ്ങൾക്കായി സ്ക്രീൻ ചെയ്യുക.",
   "tool_cancer_cta": "ഇപ്പോൾ പരിശോധിക്കുക",
+  "tool_cancer_badge": "സ്ക്രീനിംഗ് ടൂൾ",
+  "tool_cancer_subtitle": "നേരത്തെ കണ്ടെത്തൽ ജീവൻ രക്ഷിക്കുന്നു. സത്യസന്ധമായി ഉത്തരം നൽകുക — ഇത് നിങ്ങളുടെ അവബോധത്തിനാണ്.",
+  "tool_cancer_gender_title": "ആദ്യം, നിങ്ങളുടെ ലിംഗം പറയുക",
+  "tool_cancer_gender_description": "ശരിയായ ചോദ്യങ്ങൾ ചോദിക്കാൻ ഇത് സഹായിക്കുന്നു",
+  "tool_cancer_general_symptoms": "പൊതു ലക്ഷണങ്ങൾ",
+  "tool_cancer_symptoms_description": "കഴിഞ്ഞ കുറച്ച് മാസങ്ങളിൽ ഇവയിലേതെങ്കിലും അനുഭവിച്ചിട്ടുണ്ടോ?",
+  "tool_cancer_women_symptoms": "സ്ത്രീകൾക്ക് പ്രത്യേകമായ ലക്ഷണങ്ങൾ",
+  "tool_cancer_women_symptoms_description": "പരിശോധിക്കേണ്ട അധിക ലക്ഷണങ്ങൾ",
+  "tool_cancer_check_symptoms": "ലക്ഷണങ്ങൾ പരിശോധിക്കുക",
+  "tool_cancer_consult_title": "ഡോക്ടറെ സമീപിക്കുക",
+  "tool_cancer_consult_description": "മെഡിക്കൽ വിലയിരുത്തൽ ആവശ്യമായ ഒന്നോ അതിലധികമോ ലക്ഷണങ്ങൾ നിങ്ങൾ റിപ്പോർട്ട് ചെയ്തു. കൂടുതൽ വിലയിരുത്തലിനായി അടുത്തുള്ള ആരോഗ്യ കേന്ദ്രത്തിലെ ഡോക്ടറെ സമീപിക്കുക. നേരത്തെ കണ്ടെത്തൽ വലിയ വ്യത്യാസം ഉണ്ടാക്കും.",
+  "tool_cancer_find_facility": "അടുത്തുള്ള ആരോഗ്യ കേന്ദ്രം കണ്ടെത്തുക",
+  "tool_cancer_no_symptoms_title": "ലക്ഷണങ്ങൾ റിപ്പോർട്ട് ചെയ്തിട്ടില്ല",
+  "tool_cancer_no_symptoms_description": "5 വർഷത്തിലൊരിക്കൽ പതിവ് സ്ക്രീനിംഗ് പരിഗണിക്കുക. പിന്നീട് പുതിയ ലക്ഷണങ്ങൾ ശ്രദ്ധയിൽപ്പെട്ടാൽ, ഉടൻ ആരോഗ്യ കേന്ദ്രം സന്ദർശിക്കുക.",
+  "tool_cancer_breast_exam_title": "സ്വയം മാറിട പരിശോധന ഗൈഡ്",
+  "tool_cancer_breast_exam_subtitle": "സ്വയം മാറിട പരിശോധന എങ്ങനെ നടത്താം:",
+  "tool_cancer_breast_exam_step1": "തോളുകൾ നേരെയും കൈകൾ ഇടുപ്പിലും വച്ച് കണ്ണാടിക്ക് മുന്നിൽ നിൽക്കുക",
+  "tool_cancer_breast_exam_step2": "മാറിടങ്ങളുടെ വലുപ്പം, ആകൃതി, നിറം എന്നിവയിൽ മാറ്റങ്ങൾ നോക്കുക",
+  "tool_cancer_breast_exam_step3": "കൈകൾ ഉയർത്തി അതേ മാറ്റങ്ങൾ നോക്കുക",
+  "tool_cancer_breast_exam_step4": "കിടക്കുമ്പോൾ, ഇടത് മാറിടം അനുഭവിക്കാൻ വലത് കൈ ഉപയോഗിക്കുക, തിരിച്ചും",
+  "tool_cancer_breast_exam_step5": "വിരൽ പാഡുകൾ ഉപയോഗിച്ച് വൃത്താകൃതിയിൽ ഉറച്ച, മിനുസമായ സ്പർശനങ്ങൾ ഉപയോഗിക്കുക",
+  "tool_cancer_breast_exam_step6": "മുകളിൽ നിന്ന് താഴേക്ക്, വശത്തുനിന്ന് വശത്തേക്ക് മുഴുവൻ മാറിടവും മൂടുക",
+  "tool_cancer_breast_exam_step7": "ഷവറിൽ എന്നപോലെ നിൽക്കുമ്പോഴോ ഇരിക്കുമ്പോഴോ മാറിടങ്ങൾ അനുഭവിക്കുക",
+  "tool_cancer_breast_exam_note": "പുതിയ മുഴ, കട്ടിയാകൽ, അല്ലെങ്കിൽ ഏതെങ്കിലും മാറ്റം കണ്ടെത്തിയാൽ സഹായം തേടുക. പ്രതിമാസ സ്വയം പരിശോധനകൾ നിങ്ങളുടെ ശരീരത്തിന് എന്താണ് സാധാരണ എന്ന് അറിയാൻ സഹായിക്കുന്നു.",
+  "tool_cancer_about_title": "ഈ സ്ക്രീനിംഗിനെക്കുറിച്ച്",
+  "tool_cancer_about_description": "മെഡിക്കൽ ശ്രദ്ധ ആവശ്യമായേക്കാവുന്ന സാധ്യതയുള്ള മുന്നറിയിപ്പ് ലക്ഷണങ്ങൾ തിരിച്ചറിയാൻ ഈ ഉപകരണം സഹായിക്കുന്നു. ഇത് രോഗനിർണയമല്ല. പല ലക്ഷണങ്ങൾക്കും കാൻസർ അല്ലാത്ത കാരണങ്ങൾ ഉണ്ടാകാം. ഒരു ആരോഗ്യ പ്രൊഫഷണലിന് മാത്രമേ ശരിയായ രോഗനിർണയം നൽകാൻ കഴിയൂ.",
+  "tool_cancer_cta_description": "വ്യക്തിഗത റിസ്ക് സ്കോറുകൾക്കും മാർഗ്ഗനിർദ്ദേശത്തിനും പൂർണ്ണ വിലയിരുത്തൽ എടുക്കുക.",
   "tool_uhid_title": "UHID സൃഷ്ടിക്കുക",
   "tool_uhid_description": "കേരളത്തിന്റെ ഡിജിറ്റൽ ആരോഗ്യ സംവിധാനത്തിനായി യുണീക് ഹെൽത്ത് ID നേടുക.",
   "tool_uhid_cta": "ആരംഭിക്കുക",
+  "tool_uhid_badge": "UHID ടൂൾ",
+  "tool_uhid_subtitle": "കേരളത്തിന്റെ ഡിജിറ്റൽ ആരോഗ്യ ആവാസവ്യവസ്ഥയ്ക്കായി യുണീക് ഹെൽത്ത് ഐഡന്റിഫയർ",
+  "tool_uhid_what_is_title": "UHID എന്താണ്?",
+  "tool_uhid_what_is_description_1": "UHID (യുണീക് ഹെൽത്ത് ഐഡന്റിഫയർ) കേരളത്തിന്റെ സ്റ്റേറ്റ് ഡിജിറ്റൽ ഹെൽത്ത് മിഷന്റെ കീഴിൽ ഓരോ പൗരനും നൽകുന്ന ഒരു അദ്വിതീയ തിരിച്ചറിയൽ നമ്പറാണ്. കേരളത്തിലെ എല്ലാ സർക്കാർ ആരോഗ്യ കേന്ദ്രങ്ങളിലും നിങ്ങളുടെ ഡിജിറ്റൽ ആരോഗ്യ ഐഡന്റിറ്റിയായി ഇത് പ്രവർത്തിക്കുന്നു.",
+  "tool_uhid_what_is_description_2": "UHID ഉപയോഗിച്ച്, സർക്കാർ ആശുപത്രികൾ, PHC-കൾ, ആരോഗ്യ കേന്ദ്രങ്ങൾ എന്നിവയിൽ നിന്നുള്ള നിങ്ങളുടെ എല്ലാ ആരോഗ്യ രേഖകളും ഒരുമിച്ച് ലിങ്ക് ചെയ്യപ്പെടുന്നു, ആരോഗ്യ സേവന വിതരണം സുഗമവും കാര്യക്ഷമവുമാക്കുന്നു.",
+  "tool_uhid_benefits_title": "UHID-ന്റെ ആനുകൂല്യങ്ങൾ",
+  "tool_uhid_benefit_1": "എല്ലാ മെഡിക്കൽ രേഖകളും ഒരിടത്ത് ആക്സസ് ചെയ്യുക",
+  "tool_uhid_benefit_2": "കേരളത്തിലെ സർക്കാർ ആശുപത്രികളിലുടനീളം സുഗമമായ പരിചരണം",
+  "tool_uhid_benefit_3": "സുരക്ഷിതവും സ്വകാര്യവുമായ ആരോഗ്യ ഡാറ്റ സംഭരണം",
+  "tool_uhid_benefit_4": "മൊബൈൽ, വെബ് പോർട്ടൽ വഴി എളുപ്പത്തിൽ ആക്സസ്",
+  "tool_uhid_benefit_5": "ആരോഗ്യ കേന്ദ്രങ്ങളിൽ വേഗത്തിലുള്ള രജിസ്ട്രേഷൻ",
+  "tool_uhid_how_to_title": "എങ്ങനെ രജിസ്റ്റർ ചെയ്യാം",
+  "tool_uhid_how_to_description": "മൊബൈൽ നമ്പറുമായി ലിങ്ക് ചെയ്ത നിങ്ങളുടെ ആധാർ നമ്പർ ആവശ്യമാണ്",
+  "tool_uhid_step_1": "eHealth Kerala പോർട്ടൽ സന്ദർശിക്കാൻ താഴെയുള്ള ബട്ടൺ ക്ലിക്ക് ചെയ്യുക",
+  "tool_uhid_step_2": "'UHID സൃഷ്ടിക്കുക / UHID-മായി മൊബൈൽ നമ്പർ ലിങ്ക് ചെയ്യുക' തിരഞ്ഞെടുക്കുക",
+  "tool_uhid_step_3": "നിങ്ങളുടെ ആധാർ നമ്പർ നൽകുക",
+  "tool_uhid_step_4": "ആധാർ ലിങ്ക് ചെയ്ത മൊബൈലിലേക്ക് അയച്ച OTP ഉപയോഗിച്ച് സ്ഥിരീകരിക്കുക",
+  "tool_uhid_step_5": "നിങ്ങളുടെ വിശദാംശങ്ങൾ സ്ഥിരീകരിക്കുക, UHID സൃഷ്ടിക്കപ്പെടും",
+  "tool_uhid_go_to_portal": "eHealth Kerala പോർട്ടലിലേക്ക് പോകുക",
+  "tool_uhid_already_have_title": "ഇതിനകം UHID ഉണ്ടോ?",
+  "tool_uhid_already_have_description": "ലോഗിൻ ചെയ്യാനും ആരോഗ്യ രേഖകൾ കാണാനും പ്രൊഫൈൽ നിയന്ത്രിക്കാനും അതേ പോർട്ടൽ ഉപയോഗിക്കാം.",
+  "tool_uhid_faq_1_question": "എന്റെ മൊബൈൽ ആധാറുമായി ലിങ്ക് ചെയ്തിട്ടില്ലെങ്കിൽ എന്തുചെയ്യും?",
+  "tool_uhid_faq_1_answer": "നിങ്ങളുടെ മൊബൈൽ നമ്പർ ആധാറുമായി ലിങ്ക് ചെയ്തിട്ടില്ലെങ്കിൽ, അടുത്തുള്ള സർക്കാർ ആശുപത്രി റിസപ്ഷൻ ഡെസ്കിൽ ആരോഗ്യ ജീവനക്കാരുടെ സഹായത്തോടെ UHID സൃഷ്ടിക്കാം.",
+  "tool_uhid_faq_2_question": "എന്റെ ആരോഗ്യ ഡാറ്റ സുരക്ഷിതമാണോ?",
+  "tool_uhid_faq_2_answer": "അതെ. സ്റ്റേറ്റ് ഡിജിറ്റൽ ഹെൽത്ത് മിഷൻ കർശനമായ ഡാറ്റ സംരക്ഷണ മാർഗ്ഗനിർദ്ദേശങ്ങൾ പാലിക്കുന്നു. നിങ്ങളുടെ ആരോഗ്യ രേഖകൾ എൻക്രിപ്റ്റ് ചെയ്തിരിക്കുന്നു, നിങ്ങൾ ഒരു കേന്ദ്രം സന്ദർശിക്കുമ്പോൾ അംഗീകൃത ആരോഗ്യ ദാതാക്കൾക്ക് മാത്രമേ ആക്സസ് ചെയ്യാൻ കഴിയൂ.",
+  "tool_uhid_faq_3_question": "സ്വകാര്യ ആശുപത്രികളിൽ UHID ഉപയോഗിക്കാമോ?",
+  "tool_uhid_faq_3_answer": "നിലവിൽ, UHID പ്രധാനമായും സർക്കാർ ആരോഗ്യ കേന്ദ്രങ്ങളിൽ ഉപയോഗിക്കുന്നു. എന്നിരുന്നാലും, സ്റ്റേറ്റ് ഡിജിറ്റൽ ഹെൽത്ത് മിഷന്റെ കീഴിൽ സ്വകാര്യ ആശുപത്രികളുമായുള്ള സംയോജനം വിപുലീകരിക്കുന്നു.",
+  "tool_uhid_cta_title": "ആരോഗ്യ പരിശോധന വേണോ?",
+  "tool_uhid_cta_description": "വ്യക്തിഗത റിസ്ക് സ്കോറുകൾക്കും മാർഗ്ഗനിർദ്ദേശത്തിനും ഞങ്ങളുടെ വേഗത്തിലുള്ള വിലയിരുത്തൽ എടുക്കുക.",
+  "tool_uhid_cta_button": "ആരോഗ്യ വിലയിരുത്തൽ എടുക്കുക",
   "tool_jak_title": "JAK കണ്ടെത്തുക",
   "tool_jak_description": "നിങ്ങളുടെ അടുത്തുള്ള ജനകീയ ആരോഗ്യ കേന്ദ്രം കണ്ടെത്തുക.",
   "tool_jak_cta": "ഇപ്പോൾ കണ്ടെത്തുക",
+  "tool_jak_badge": "JAK കണ്ടെത്തുക",
+  "tool_jak_subtitle": "നിങ്ങളുടെ പ്രദേശത്തെ അടുത്തുള്ള പ്രാഥമിക ആരോഗ്യ കേന്ദ്രം കണ്ടെത്തുക",
+  "tool_jak_what_is_title": "ജനകീയ ആരോഗ്യ കേന്ദ്രം എന്താണ്?",
+  "tool_jak_what_is_description_1": "ജനകീയ ആരോഗ്യ കേന്ദ്രം (JAK) കേരളത്തിലെ ഫാമിലി ഹെൽത്ത് സെന്ററുകളുടെ ശൃംഖലയാണ്, സമഗ്രമായ പ്രാഥമിക ആരോഗ്യ സേവനങ്ങൾ സമൂഹങ്ങൾക്ക് നൽകുന്നു. പ്രതിരോധ, പ്രോത്സാഹന, ചികിത്സാ ആരോഗ്യ സംരക്ഷണത്തിനുള്ള ആദ്യ സമ്പർക്ക കേന്ദ്രമാണ് ഇവ.",
+  "tool_jak_what_is_description_2": "JAK-കൾ നാഷണൽ ഹെൽത്ത് മിഷന്റെ കീഴിൽ പ്രവർത്തിക്കുന്നു, സൗജന്യ കൺസൾട്ടേഷനുകൾ, അവശ്യ മരുന്നുകൾ, ഡയഗ്നോസ്റ്റിക് സേവനങ്ങൾ, റഫറൽ പിന്തുണ എന്നിവ നൽകുന്നു.",
+  "tool_jak_services_title": "JAK-ൽ ലഭ്യമായ സേവനങ്ങൾ",
+  "tool_jak_service_opd": "ജനറൽ OPD",
+  "tool_jak_service_ncd": "NCD സ്ക്രീനിംഗ്",
+  "tool_jak_service_medicines": "സൗജന്യ മരുന്നുകൾ",
+  "tool_jak_service_family": "ഫാമിലി ഹെൽത്ത്",
+  "tool_jak_service_lab": "ലാബ് സേവനങ്ങൾ",
+  "tool_jak_service_teleconsult": "ടെലികൺസൾട്ടേഷൻ",
+  "tool_jak_search_title": "JAK-നായി തിരയുക",
+  "tool_jak_search_description": "നിങ്ങളുടെ അടുത്തുള്ള ജനകീയ ആരോഗ്യ കേന്ദ്രം കണ്ടെത്തുക",
+  "tool_jak_select_district": "ജില്ല തിരഞ്ഞെടുക്കുക",
+  "tool_jak_choose_district": "നിങ്ങളുടെ ജില്ല തിരഞ്ഞെടുക്കുക",
+  "tool_jak_search_by_name": "പേരോ സ്ഥലമോ ഉപയോഗിച്ച് തിരയുക",
+  "tool_jak_search_placeholder": "ഉദാ: പഞ്ചായത്ത് പേര്, പ്രദേശം...",
+  "tool_jak_coming_soon_title": "ഉടൻ വരുന്നു",
+  "tool_jak_coming_soon_description": "ജനകീയ ആരോഗ്യ കേന്ദ്രങ്ങളുടെ പൂർണ്ണ ഡയറക്ടറി ചേർക്കാൻ ഞങ്ങൾ പ്രവർത്തിക്കുന്നു. ഇതിനിടയിൽ, നിങ്ങളുടെ പ്രാദേശിക ASHA വർക്കറുമായി ബന്ധപ്പെടുക അല്ലെങ്കിൽ അടുത്തുള്ള സർക്കാർ ആരോഗ്യ കേന്ദ്രം സന്ദർശിക്കുക.",
+  "tool_jak_other_ways_title": "സഹായം കണ്ടെത്താനുള്ള മറ്റ് വഴികൾ",
+  "tool_jak_helpline_title": "ഹെൽത്ത് ഹെൽപ്പ്‌ലൈൻ",
+  "tool_jak_helpline_description": "ആരോഗ്യ വിവരങ്ങൾക്ക് 104 വിളിക്കുക",
+  "tool_jak_asha_title": "ASHA വർക്കറുമായി ബന്ധപ്പെടുക",
+  "tool_jak_asha_description": "നിങ്ങളുടെ പ്രാദേശിക ASHA അടുത്തുള്ള കേന്ദ്രത്തിലേക്ക് മാർഗ്ഗനിർദ്ദേശം നൽകും",
+  "tool_jak_phc_title": "PHC/CHC സന്ദർശിക്കുക",
+  "tool_jak_phc_description": "നിങ്ങളുടെ അടുത്തുള്ള പ്രാഥമിക ആരോഗ്യ കേന്ദ്രത്തിലേക്ക് പോകുക",
+  "tool_jak_hours_title": "സാധാരണ പ്രവർത്തന സമയം",
+  "tool_jak_hours_weekday": "തിങ്കൾ - ശനി",
+  "tool_jak_hours_weekday_time": "8:00 AM - 4:00 PM",
+  "tool_jak_hours_emergency": "എമർജൻസി സേവനങ്ങൾ",
+  "tool_jak_hours_emergency_time": "24/7 (തിരഞ്ഞെടുത്ത കേന്ദ്രങ്ങളിൽ)",
+  "tool_jak_hours_sunday": "ഞായർ & അവധി ദിനങ്ങൾ",
+  "tool_jak_hours_sunday_time": "എമർജൻസി മാത്രം",
+  "tool_jak_hours_note": "* സമയം സ്ഥലം അനുസരിച്ച് വ്യത്യാസപ്പെടാം. സ്ഥിരീകരിക്കാൻ മുൻകൂട്ടി വിളിക്കുക.",
+  "tool_jak_bring_title": "എന്ത് കൊണ്ടുവരണം",
+  "tool_jak_bring_1": "ആധാർ കാർഡ് അല്ലെങ്കിൽ ഏതെങ്കിലും സർക്കാർ ID",
+  "tool_jak_bring_2": "UHID കാർഡ് (ഉണ്ടെങ്കിൽ)",
+  "tool_jak_bring_3": "മുമ്പത്തെ മെഡിക്കൽ രേഖകൾ (ഉണ്ടെങ്കിൽ)",
+  "tool_jak_bring_4": "നിലവിലെ മരുന്നുകളുടെ ലിസ്റ്റ്",
+  "tool_jak_cta_title": "ആദ്യം നിങ്ങളുടെ ആരോഗ്യം പരിശോധിക്കുക",
+  "tool_jak_cta_description": "നിങ്ങളുടെ അപകടസാധ്യത ഘടകങ്ങൾ മനസ്സിലാക്കാൻ സന്ദർശനത്തിന് മുമ്പ് ഞങ്ങളുടെ വേഗത്തിലുള്ള വിലയിരുത്തൽ എടുക്കുക.",
+  "tool_jak_cta_button": "ആരോഗ്യ വിലയിരുത്തൽ എടുക്കുക",
 
   "assessment_badge": "സമഗ്ര പരിശോധന",
   "assessment_title": "സമ്പൂർണ്ണ ആരോഗ്യ അപകടസാധ്യത വിലയിരുത്തൽ",
