--- a/locales/en.json
+++ b/locales/en.json
@@ -170,6 +170,13 @@
   "tool_jak_choose_district": "Choose your district",
   "tool_jak_search_by_name": "Search by name or location",
   "tool_jak_search_placeholder": "e.g., Panchayat name, area...",
+  "tool_jak_results_title": "Search Results",
+  "tool_jak_results_found": "found",
+  "tool_jak_results_none": "No JAKs found matching your search criteria.",
+  "tool_jak_results_none_hint": "Try selecting a different district or adjusting your search.",
+  "tool_jak_results_limit": "Showing first 100 results. Narrow your search to see more specific results.",
+  "tool_jak_clear": "Clear",
+  "tool_jak_get_directions": "Get Directions",
   "tool_jak_coming_soon_title": "Coming Soon",
   "tool_jak_coming_soon_description": "We're working on adding the complete directory of Janakeeya Arogya Kendrams. In the meantime, please contact your local ASHA worker or visit the nearest government health facility for assistance.",
   "tool_jak_other_ways_title": "Other Ways to Find Help",
