--- a/locales/ml.json
+++ b/locales/ml.json
@@ -167,6 +167,13 @@
   "tool_jak_choose_district": "നിങ്ങളുടെ ജില്ല തിരഞ്ഞെടുക്കുക",
   "tool_jak_search_by_name": "പേരോ സ്ഥലമോ ഉപയോഗിച്ച് തിരയുക",
   "tool_jak_search_placeholder": "ഉദാ: പഞ്ചായത്ത് പേര്, പ്രദേശം...",
+  "tool_jak_results_title": "തിരയൽ ഫലങ്ങൾ",
+  "tool_jak_results_found": "കണ്ടെത്തി",
+  "tool_jak_results_none": "നിങ്ങളുടെ തിരയലുമായി പൊരുത്തപ്പെടുന്ന JAK-കൾ കണ്ടെത്തിയില്ല.",
+  "tool_jak_results_none_hint": "മറ്റൊരു ജില്ല തിരഞ്ഞെടുക്കുക അല്ലെങ്കിൽ നിങ്ങളുടെ തിരയൽ മാറ്റുക.",
+  "tool_jak_results_limit": "ആദ്യ 100 ഫലങ്ങൾ കാണിക്കുന്നു. കൂടുതൽ നിർദ്ദിഷ്ട ഫലങ്ങൾക്കായി നിങ്ങളുടെ തിരയൽ ചുരുക്കുക.",
+  "tool_jak_clear": "മായ്ക്കുക",
+  "tool_jak_get_directions": "ദിശകൾ നേടുക",
   "tool_jak_coming_soon_title": "ഉടൻ വരുന്നു",
   "tool_jak_coming_soon_description": "ജനകീയ ആരോഗ്യ കേന്ദ്രങ്ങളുടെ പൂർണ്ണ ഡയറക്ടറി ചേർക്കാൻ ഞങ്ങൾ പ്രവർത്തിക്കുന്നു. ഇതിനിടയിൽ, നിങ്ങളുടെ പ്രാദേശിക ASHA വർക്കറുമായി ബന്ധപ്പെടുക അല്ലെങ്കിൽ അടുത്തുള്ള സർക്കാർ ആരോഗ്യ കേന്ദ്രം സന്ദർശിക്കുക.",
   "tool_jak_other_ways_title": "സഹായം കണ്ടെത്താനുള്ള മറ്റ് വഴികൾ",
